--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,15 @@
 ---
-abstract: 'A convenient way to make many Moose immutable (or mutable) in one shot'
+abstract: 'A convenient way to make many Moosen immutable (or mutable) in one shot'
 author:
   - 'Robert Krimen, C<< <rkrimen at cpan.org> >>'
 build_requires:
-  Test::Deep: 0
-  Test::More: 0
+  Test::Most: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.710'
+generated_by: 'Module::Install version 0.760'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: MooseX-MakeImmutable
 no_index:
   directory:
@@ -24,4 +23,7 @@ requires:
   Module::Pluggable: 3.8
   Moose: 0
   Scalar::Util: 0
-version: 0.01
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: http://github.com/robertkrimen/moosex-makeimmutable/tree/master
+version: 0.02
